"solved all problems!"
-Deleted unnecessary folders
-Readme is now more descriptive

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ Task 2/Task 2/Debug/Task 2.tlog/link.write.1.tlog
 Task 2/Task 2/Debug/Task 2.tlog/Task 2.lastbuildstate
 Task 2/Task 2/Debug/vc142.idb
 Task 2/Task 2/Debug/vc142.pdb
+Task 2/.vs/Task 2/v16/.suo
+Task 2/.vs/Task 2/v16/Browse.VC.db
+Task 2/Debug/Task 2.exe
+Task 2/Debug/Task 2.ilk
+Task 2/Debug/Task 2.pdb
+Task 2/Task 2/Debug/assignment2.obj
+Task 2/Task 2/Debug/vc142.idb
+Task 2/Task 2/Debug/vc142.pdb
